Fixed the background scrolling behind overlay on mobile

--- a/components/sass/partials/_layout.scss
+++ b/components/sass/partials/_layout.scss
@@ -2,6 +2,7 @@
 /* ************************************ */
 
 .body--prevent-scrolling{
+  position: absolute;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   z-index: 1;
